--- a/web/templates/registrar/users/home.html
+++ b/web/templates/registrar/users/home.html
@@ -2,6 +2,7 @@
 
 {% block js %}
             <script type="text/javascript" src="/static/scripts/watermark.js"></script>
+            <script type="text/javascript" src="/static/scripts/underscore.js"></script>
             <script type="text/javascript" src="/static/scripts/dataTables/jquery.dataTables.min.js"></script>
             <script type="text/javascript" src="/static/scripts/handlebars.js"></script>
             <script type="text/coffeescript" src="/static/scripts/registrar/users.coffee"></script>
