--- a/web/src/components/calendar/monthCalendar/weekStyle.styl
+++ b/web/src/components/calendar/monthCalendar/weekStyle.styl
@@ -3,3 +3,11 @@
     
     &:last-child
         border-bottom: none
+
+.monthlyCalendarHeader
+    border-right: 1px solid #f4e0e0
+    border-bottom: 1px solid #e4e9ee
+    border-top: 1px solid #e4e9ee
+
+    &:last-child
+        border-right: none
