moved frontend scripts into primary codebase

--- a/backend/syllabus/assets/styles/default.styl
+++ b/backend/syllabus/assets/styles/default.styl
@@ -1,23 +1,5 @@
-// -*- Stylus -*-
-// -*- coding: utf-8 -*-
-//
-// alec aivazis
-// (c) {project.span} all rights reserved
-//
+body
+    min-width: 700px
 
-// this file describes the default style for syllabus
-
-.cf:after {
-     visibility: hidden;
-     display: block;
-     font-size: 0;
-     content: " ";
-     clear: both;
-     height: 0;
-     }
-.cf { display: inline-block; }
-/* start commented backslash hack \*/
-* html .cf { height: 1%; }
-.cf { display: block; }
-
-// end of file
+a 
+    text-decoration: none
