--- a/backend/syllabus/templates/index.jade
+++ b/backend/syllabus/templates/index.jade
@@ -8,22 +8,9 @@
 extends base
 
 - load staticfiles
-- load compress
-
-append css
-    link(rel="stylesheet", href="{% static 'thirdparty/normalize.css/normalize.css' %}")
-    {% compress css %}
-    link(rel="stylesheet", type="text/stylus", href="{% static 'styles/default.styl' %}")
-    {% endcompress %}
-  
-
-append js
-    script(src="{% static 'thirdparty/jquery/dist/jquery.js' %}")
-    script(src="{% static 'thirdparty/underscore/underscore.js' %}")
-    {% compress js %}
-    script(src="{% static 'scripts/core.coffee' %}", type="text/coffeescript")
-    {% endcompress %}
 
 append content
+    script(src="https://use.fonticons.com/ce4e0ad3.js")
+    script(src="{% static 'build/app.js' %}")
 
 //- end of file
