added react-bootstrap popover to gradebook

--- a/syllabus/templates/index.jade
+++ b/syllabus/templates/index.jade
@@ -9,6 +9,11 @@ extends base
 
 - load staticfiles
 
+append js
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+
 append content
     script(src="https://use.fonticons.com/ce4e0ad3.js")
     script(src="{% static 'build/app.js' %}")
