--- a/syllabus/templates/index.jade
+++ b/syllabus/templates/index.jade
@@ -12,7 +12,7 @@ extends base
 append js
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
-    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+    link(rel="stylesheet" href="{% static 'styles/bootstrap.css' %}")
 
 append content
     script(src="https://use.fonticons.com/ce4e0ad3.js")
